Configured build.gradle's Onley JsonParser Test are failing